# Umpalumpa

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  sonar-project.properties  workspace.code-workspace
build_example_cmake/: CMakeLists.txt  helloworld.cpp
build_example_cmake/MathFunctions/: CMakeLists.txt  mysqrt.cxx
examples/flexalign/: CMakeLists.txt  empty.cu  flexalign.cpp  flexalign.hpp  flexalign_cpu.cpp  flexalign_cpu.hpp  flexalign_cuda.cpp  flexalign_cuda.hpp  flexalign_starpu.cpp  flexalign_starpu.hpp  main.cpp  testing_protocol.txt
examples/fourier_reconstruction/: CMakeLists.txt  fr.cpp  fr.hpp  fr_cpu.cpp  fr_cpu.hpp  fr_cuda.cpp  fr_cuda.hpp  fr_starpu.cpp  fr_starpu.hpp  main.cpp
libumpalumpa/: CMakeLists.txt  hello_starpu.c  vector-scale_hybrid_cuda.cu  vector_scale_hybrid.cpp
libumpalumpa/algorithms/: alg1.cpp  alg1.hpp  basic_algorithm.hpp  ktt_base.cpp  ktt_base.hpp
libumpalumpa/algorithms/correlation/: acorrelation.hpp  correlation_cpu.cpp  correlation_cpu.hpp  correlation_cuda.cpp  correlation_cuda.hpp  correlation_cuda_kernels.cu  correlation_starpu.cpp  correlation_starpu.hpp  correlation_type.hpp  settings.hpp
libumpalumpa/algorithms/extrema_finder/: aextrema_finder.hpp  precision.hpp  result.hpp  search_location.hpp  search_result.hpp  search_settings.hpp  search_type.hpp  settings.hpp  single_extrema_finder.cpp  single_extrema_finder.hpp  single_extrema_finder_cpu.cpp  single_extrema_finder_cpu.cpp.orig  single_extrema_finder_cpu.hpp  single_extrema_finder_cpu_kernels.hpp  single_extrema_finder_cuda.cpp  single_extrema_finder_cuda.hpp  single_extrema_finder_cuda_kernels.cu  single_extrema_finder_gpu.cpp  single_extrema_finder_gpu.hpp  single_extrema_finder_gpu_kernels.cu  single_extrema_finder_starpu.cpp  single_extrema_finder_starpu.hpp
libumpalumpa/algorithms/fourier_processing/: afp.hpp  fp_common_kernels.hpp  fp_cpu.cpp  fp_cpu.hpp  fp_cpu_kernels.hpp  fp_cuda.cpp  fp_cuda.hpp  fp_cuda_kernels.cu  fp_starpu.cpp  fp_starpu.hpp  settings.hpp
libumpalumpa/algorithms/fourier_reconstruction/: afr.cpp  afr.hpp  blob_order.hpp  constants.hpp  fr_common_kernels.hpp  fr_cpu.cpp  fr_cpu.hpp  fr_cpu_kernels.hpp  fr_cuda.cpp  fr_cuda.hpp  fr_cuda_kernels.cu  fr_starpu.cpp  fr_starpu.hpp  fr_starpu_kernels.cu  settings.hpp  traverse_space.hpp  traverse_space_generator.hpp
libumpalumpa/algorithms/fourier_transformation/: afft.hpp  direction.hpp  fft_cpu.cpp  fft_cpu.hpp  fft_cuda.cpp  fft_cuda.hpp  fft_starpu.cpp  fft_starpu.hpp  settings.hpp
libumpalumpa/algorithms/initialization/: cpu.cpp  cpu.hpp  cuda.cpp  cuda.hpp  cuda_kernels.cu  settings.hpp  starpu.cpp
libumpalumpa/algorithms/reduction/: abstract.hpp  cpu.cpp  cpu.hpp  cpu_kernels.hpp  cuda.cpp  cuda.hpp  cuda_kernels.cu  settings.hpp  starpu.cpp  starpu.hpp
libumpalumpa/data/: data_type.hpp  dimensionality.hpp  fourier_descriptor.hpp  logical_desriptor.hpp  managed_by.hpp  multi_payload_wrapper.hpp  padding_descriptor.hpp  payload.hpp  payload_wrapper.hpp  physical_desriptor.hpp  point3d.hpp  single_payload_wrapper.hpp  size.hpp  starpu_payload.hpp  starpu_utils.cpp  starpu_utils.hpp
libumpalumpa/data/extrema_finder/: result_data.hpp  search_data.hpp
libumpalumpa/legacy/: starpu_payload.hpp
libumpalumpa/legacy/initialization/: abstract.hpp  cuda.cpp  starpu.hpp
libumpalumpa/math/: bessier.hpp  geometry.hpp  kaiser.hpp  pi.hpp
libumpalumpa/operations/: basic_operation.hpp
libumpalumpa/operations/correlation/: acorrelation.hpp  correlation_cpu.cpp  correlation_cpu.hpp  correlation_cpu_kernels.hpp  correlation_cuda.cpp  correlation_cuda.hpp  correlation_cuda_kernels.cu  correlation_starpu.cpp  correlation_starpu.hpp  settings.hpp
libumpalumpa/operations/extrema_finder/: aextrema_finder.hpp  extrema_type.hpp  location.hpp  settings.hpp  single_extrema_finder_cpu.cpp  single_extrema_finder_cpu.hpp  single_extrema_finder_cpu_kernels.hpp  single_extrema_finder_cuda.cpp  single_extrema_finder_cuda.hpp  single_extrema_finder_starpu.cpp  single_extrema_finder_starpu.hpp
libumpalumpa/operations/fourier_processing/: afp.hpp  fp_cpu.cpp  fp_cpu.hpp  fp_cpu_kernels.hpp  fp_cuda.cpp  fp_cuda.hpp  fp_cuda_kernels.cu  fp_starpu.cpp  fp_starpu.hpp  settings.hpp
libumpalumpa/operations/fourier_reconstruction/: afr.cpp  afr.hpp  blob_order.hpp  fr_common_kernels.hpp  fr_cpu.cpp  fr_cpu.hpp  fr_cpu_kernels.hpp  fr_cuda.cpp  fr_cuda.hpp  fr_cuda_kernels.cu  fr_starpu.cpp  fr_starpu.hpp  fr_starpu_kernels.cu  fr_starpu_kernels.hpp  settings.hpp  traverse_space_generator.hpp
libumpalumpa/operations/fourier_transformation/: afft.hpp  fft_cpu.cpp  fft_cpu.hpp  fft_cuda.cpp  fft_cuda.hpp  fft_starpu.cpp  fft_starpu.hpp  locality.hpp  settings.hpp
libumpalumpa/operations/initialization/: abstract.hpp  cpu.cpp  cpu.hpp  cuda.cpp  cuda.hpp  settings.hpp  starpu.cpp  starpu.hpp
libumpalumpa/system_includes/: cuda_runtime.hpp  cufftXt.hpp  ktt.hpp  spdlog.hpp
libumpalumpa/tuning/: algorithm_manager.cpp  algorithm_manager.hpp  garbage_collector.hpp  ktt_base.cpp  ktt_base.hpp  ktt_helper.hpp  ktt_id_tracker.hpp  ktt_provider.cpp  ktt_provider.hpp  ktt_strategy_base.hpp  strategy_group.hpp  strategy_manager.cpp  strategy_manager.hpp  tunable_strategy.cpp  tunable_strategy.hpp  tuning_approach.hpp
libumpalumpa/utils/: atomic.hpp  bool_expand.hpp  cuda.cpp  cuda.hpp  cuda_compatibility.hpp  cuda_memory.hpp  geometry.hpp  ktt.cpp  ktt.hpp  ktt_helper.hpp  ktt_provider.cpp  ktt_provider.hpp  logger.hpp  payload.hpp  starpu.cpp  starpu.hpp  system.cpp  system.hpp
tests/: CMakeLists.txt  runAll.sh  utils.hpp
tests/algorithms/: common.hpp  extrema_finder.cpp  extrema_finder_common.hpp  extrema_finder_cpu.cpp  extrema_finder_cuda.cpp  extrema_finder_gpu.cpp  extrema_finder_starpu.cpp  test1.cpp  test2.cpp  test_processing_unit.hpp
tests/data/: CMakeLists.txt  size.cpp
tests/legacy/: CMakeLists.txt  cuda.cpp  starpu.cpp
tests/operations/: common.hpp
tests/tuning/: waiting_algorithm.hpp  waiting_kernel.cu  waiting_operation.hpp
(+125 files in other folders)
